--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
   <body class="mat-typography mat-app-background">
     <app-root></app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
-  <link rel="modulepreload" href="chunk-XH3LH4H2.js"><link rel="modulepreload" href="chunk-FDDV7LYV.js"><link rel="modulepreload" href="chunk-SUAEE7HY.js"><link rel="modulepreload" href="chunk-LRLKFKMO.js"><link rel="modulepreload" href="chunk-BCNRL4NK.js"><script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-XKD44YGX.js" type="module"></script></body>
+  <link rel="modulepreload" href="chunk-XH3LH4H2.js"><link rel="modulepreload" href="chunk-FDDV7LYV.js"><link rel="modulepreload" href="chunk-SUAEE7HY.js"><link rel="modulepreload" href="chunk-LRLKFKMO.js"><link rel="modulepreload" href="chunk-BCNRL4NK.js"><script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-KRU2U2B7.js" type="module"></script></body>
 </html>
