--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
   <body class="mat-typography mat-app-background">
     <app-root></app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
-  <link rel="modulepreload" href="chunk-45HXEJ6V.js"><link rel="modulepreload" href="chunk-5Z3A46A4.js"><link rel="modulepreload" href="chunk-NZTYITEQ.js"><link rel="modulepreload" href="chunk-LFKKBSHB.js"><link rel="modulepreload" href="chunk-32JRF7TD.js"><script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-QPWYWVNR.js" type="module"></script></body>
+  <link rel="modulepreload" href="chunk-ZPGVP7BG.js"><link rel="modulepreload" href="chunk-NQHDRJOQ.js"><link rel="modulepreload" href="chunk-NZTYITEQ.js"><link rel="modulepreload" href="chunk-LFKKBSHB.js"><link rel="modulepreload" href="chunk-32JRF7TD.js"><script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-PPY4WF4J.js" type="module"></script></body>
 </html>
