--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
   <body class="mat-typography mat-app-background">
     <app-root></app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
-  <link rel="modulepreload" href="chunk-PNKIQI5A.js"><link rel="modulepreload" href="chunk-RVVXJ2F4.js"><link rel="modulepreload" href="chunk-5MQ7XYZV.js"><link rel="modulepreload" href="chunk-5M6SDQAB.js"><link rel="modulepreload" href="chunk-LTQDWN26.js"><link rel="modulepreload" href="chunk-DH4MWFWR.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-IHQ7B2O7.js" type="module"></script></body>
+  <link rel="modulepreload" href="chunk-WXCWP3DG.js"><link rel="modulepreload" href="chunk-AF4CDQ2G.js"><link rel="modulepreload" href="chunk-KSH4XKSQ.js"><link rel="modulepreload" href="chunk-PQ5KA4QR.js"><link rel="modulepreload" href="chunk-PLJUC4GA.js"><link rel="modulepreload" href="chunk-F55HGIM7.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-WUEY7JLQ.js" type="module"></script></body>
 </html>
